--- a/miniprogram/pages/login/login.wxml
+++ b/miniprogram/pages/login/login.wxml
@@ -83,10 +83,10 @@
         </button>
         
         <view class="remember-section">
-          <checkbox-group bindchange="handleRememberMe">
+          <!-- <checkbox-group bindchange="handleRememberMe">
             <checkbox value="remember" checked="{{rememberMe}}">记住我</checkbox>
-          </checkbox-group>
-          <text class="forget-password">忘记密码？</text>
+          </checkbox-group> -->
+          <text class="forget-password" bindtap="showForgetPasswordModal">忘记密码？</text>
         </view>
       </form>
     </view>
@@ -117,4 +117,111 @@
       <text class="tab-text">我的</text>
     </view>
   </view> -->
+</view>
+
+<!-- 忘记密码模态框 -->
+<view class="modal-container" wx:if="{{showForgetPasswordModal}}">
+  <view class="modal-mask" bindtap="hideForgetPasswordModal"></view>
+  <view class="modal-content">
+    <view class="modal-header">
+      <text class="modal-title">忘记密码</text>
+      <view class="modal-close" bindtap="hideForgetPasswordModal">×</view>
+    </view>
+    
+    <!-- 第一步：填写手机号 -->
+    <view class="modal-body" wx:if="{{forgetPasswordStep === 1}}">
+      <view class="input-group">
+        <view class="input-container">
+          <image src="/assets/iconfont/手机.png" class="input-icon" mode="aspectFit" style="width: 20px; height: 20px;"></image>
+          <input 
+            type="number" 
+            placeholder="请输入手机号"
+            value="{{forgetPhone}}"
+            bindinput="inputForgetPhone"
+            class="input-field"
+            maxlength="11"
+          />
+        </view>
+      </view>
+      
+      <button class="primary-button" bindtap="getVerificationCode" disabled="{{!forgetPhone || forgetPhone.length !== 11}}">
+        获取验证码
+      </button>
+    </view>
+    
+    <!-- 第二步：输入验证码 -->
+    <view class="modal-body" wx:if="{{forgetPasswordStep === 2}}">
+      <view class="verification-code-display">
+        <text>验证码：{{actualVerificationCode}}</text>
+      </view>
+      <view class="input-group">
+        <view class="input-container">
+          <image src="/assets/iconfont/验证码.png" class="input-icon" mode="aspectFit" style="width: 20px; height: 20px;"></image>
+          <input 
+            type="text" 
+            placeholder="请输入验证码"
+            value="{{verificationCode}}"
+            bindinput="inputVerificationCode"
+            class="input-field"
+            maxlength="6"
+          />
+        </view>
+      </view>
+      
+      <button class="primary-button" bindtap="verifyCode" disabled="{{!verificationCode}}">
+        验证
+      </button>
+    </view>
+    
+    <!-- 第三步：修改密码 -->
+    <view class="modal-body" wx:if="{{forgetPasswordStep === 3}}">
+      <view class="input-group">
+        <view class="input-container">
+          <image src="/assets/iconfont/密码.png" class="input-icon" mode="aspectFit" style="width: 20px; height: 20px;"></image>
+          <input 
+            type="password" 
+            placeholder="请输入旧密码"
+            value="{{oldPassword}}"
+            bindinput="inputOldPassword"
+            class="input-field"
+          />
+        </view>
+      </view>
+      
+      <view class="input-group">
+        <view class="input-container">
+          <image src="/assets/iconfont/密码.png" class="input-icon" mode="aspectFit" style="width: 20px; height: 20px;"></image>
+          <input 
+            type="password" 
+            placeholder="请输入新密码"
+            value="{{newPassword}}"
+            bindinput="inputNewPassword"
+            class="input-field"
+          />
+        </view>
+      </view>
+      
+      <view class="input-group">
+        <view class="input-container">
+          <image src="/assets/iconfont/密码.png" class="input-icon" mode="aspectFit" style="width: 20px; height: 20px;"></image>
+          <input 
+            type="password" 
+            placeholder="请确认新密码"
+            value="{{confirmPassword}}"
+            bindinput="inputConfirmPassword"
+            class="input-field"
+          />
+        </view>
+      </view>
+      
+      <button class="primary-button" bindtap="resetPassword" disabled="{{!oldPassword || !newPassword || !confirmPassword || newPassword !== confirmPassword}}">
+        重置密码
+      </button>
+    </view>
+    
+    <!-- 错误信息 -->
+    <view class="modal-error" wx:if="{{forgetPasswordError}}">
+      {{forgetPasswordError}}
+    </view>
+  </view>
 </view> 
